二进制实战部署/杭州I部署yaml/kubernetes/deploy_work/test/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: myns
spec:
  containers:
  - name: nginx-con1
    image: nginx
    ports:
    - containerPort: 80
  - name: nginx-con2
    image: nginx
    ports:
    - containerPort: 81
