二进制实战部署/杭州I部署yaml/kubernetes/deploy_work/test/nginx_tomcat.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-tomcat
  labels: 
    app: nginx-tomcat
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
  - name: tomcat
    image: docker.io/tomcat:8.5-jre8
    ports:
    - containerPort: 8080
