二进制实战部署/杭州I部署yaml/kubernetes/deploy_work/test/pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx1
    image: docker.io/library/nginx:1.19
    ports:
    - containerPort: 8080
  - name: nginx2
    image: docker.io/library/nginx:1.19
    ports:
    - containerPort: 8081
