二进制实战部署/杭州I部署yaml/kubernetes/deploy_work/test/pod_pod.yaml
apiVersion: v1
kind: Pod
metadata:
name: nginx-pod
labels:
 app: nginx
spec:
containers:
  - name: nginx-container
    image: nginx
    ports:
    - containerPort: 80
