二进制实战部署/杭州I部署yaml/kubernetes/deploy_work/test/tomcat_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
  labels:
    app: tomcat-svc
spec:
  type: NodePort
  selector:
    app: nginx-tomcat
  ports:
  - name: http
    port: 8080
    targetPort: 8080

  - name: http2
    port: 80
    targetPort: 80
